--- a/public/index.html
+++ b/public/index.html
@@ -13,8 +13,8 @@
     <meta name="viewport" content="initial-scale=1, maximum-scale=1">
     <meta name="theme-color" content="#000000" />
     <meta
-      name="EthereansOS"
-      content="An operating system to build on top of Ethereum."
+      name="NONbeta"
+      content="The BETA version of the NONnation"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
