--- a/public/index.html
+++ b/public/index.html
@@ -13,8 +13,8 @@
     <meta name="viewport" content="initial-scale=1, maximum-scale=1">
     <meta name="theme-color" content="#000000" />
     <meta
-      name="NONbeta"
-      content="The BETA version of the NONnation"
+      name="EthereansOS"
+      content="The BETA version of EthereansOS"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
@@ -47,7 +47,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>NONbeta</title>
+    <title>EthereansOS</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
