--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="EthereansOS"
-      content="The BETA version of EthereansOS"
+      content="The ALPHA version of EthereansOS"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
