Partial UI changes - added dark theme (to be completed)

--- a/public/index.html
+++ b/public/index.html
@@ -25,16 +25,16 @@
     <style>
       @font-face {
         font-family: ITEMregular;
-        src: url(assets/css/special/NotoSans-Regular.otf);
+        src: url(./components/assets/Poppins-Light.ttf);
       }
       @font-face {
         font-family: ITEMregular;
-        src: url(assets/css/special/NotoSans-Bold.otf);
+        src: url(./components/assets/Poppins-Medium.ttf);
         font-weight: bold;
       }
       @font-face {
         font-family: ITEMGig;
-        src: url(assets/css/special/CLAN-BOLD.OTF);
+        src: url(./components/assets/Poppins-Bold.ttf);
         font-weight: bolder;
       }
     </style>
